setting consistent status bar and navigation styling

--- a/AdventureBuilder/Base.lproj/Main.storyboard
+++ b/AdventureBuilder/Base.lproj/Main.storyboard
@@ -65,6 +65,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="2jA-HZ-yOG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.0" green="0.1160392831" blue="0.53453525639999999" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
